k8s/service.yml
apiVersion: v1
#type of object will be created
kind: Service
metadata:
  #The name of the Service; it must be a valid DNS name
  name: edge-service
  #A label attached to the Service
  labels:
    app: edge-service
spec:
  #The type of Service
  type: ClusterIP
  selector:
    # The label used to match the Pods to target and expose
    app: edge-service
  ports:
    #The network protocol used by the Service
    - protocol: TCP
      #The port expose by the Service
      port: 80
      #The port exposed by the Pods targeted by the Service
      targetPort: 9000
