k8s/ingress.yml
#the api version for ingress objects
apiVersion: networking.k8s.io/v1
#the type of object to create
kind: Ingress
metadata:
  #the name of the ingress
  name: polar-ingress
spec:
  #configures the ingress controller responsible for managing this object
  ingressClassName: nginx
  rules:
    #ingress rules for HTTP traffic
    - http:
        paths:
          #a default rule for all requests
          - path: /
            pathType: Prefix
            backend:
              service:
                #the name of the service object where traffic should be forwarded
                name: edge-service
                port:
                  #the port number for the service where traffic should be forwarded
                  number: 80
